some folder restructure, styling

--- a/packages/client/src/components/NavBar/navBar.css
+++ b/packages/client/src/components/NavBar/navBar.css
@@ -1,9 +1,3 @@
-Your other styles
-
-/* Style for active NavLink */
-.nav-link.active-link {
-  /* Your styles for the active link go here */
-  font-weight: bold;
-  color: red;
-  /* Add any other styles you want for the active link */
+.nav {
+  background-color: #778899;
 }
