--- a/packages/client/src/components/BlogCard/blogCard.css
+++ b/packages/client/src/components/BlogCard/blogCard.css
@@ -10,7 +10,7 @@
 
 a {
   text-decoration: none;
-  color: #0d1b2a;
+  color: #006d77;
   transition: color 0.3s ease;
 }
 
@@ -36,16 +36,13 @@ h4.card-title {
   padding: 8px 0;
 }
 
-.text-muted {
-  font-weight: bold;
-  color: #0d1b2a;
-}
-
 .card-text {
-  /* Text styles */
   font-size: 18px;
   line-height: 1.6;
-  color: #595959;
+  color: #0d1b2a;
   padding: 20px;
   margin: 0;
+  word-break: break-word;
+
+  letter-spacing: -0.003em;
 }
