--- a/packages/client/src/components/Hero/hero.css
+++ b/packages/client/src/components/Hero/hero.css
@@ -1,7 +1,7 @@
 .hero-section {
   position: relative;
   background-color: #f0fff4;
-  color: #0d1b2a;
+  color: #3949ab;
   height: 35rem;
   background-image: url("../../assets/heroImage.jpg");
   background-size: cover;
@@ -20,6 +20,7 @@
 }
 
 .hero-heading {
+  color: #1a237e;
   font-size: 48px;
   font-weight: bold;
   letter-spacing: 2px;
