--- a/packages/client/src/components/BlogCard/blogCard.css
+++ b/packages/client/src/components/BlogCard/blogCard.css
@@ -1,11 +1,16 @@
-.card-body-container {
+#card-body-container {
   margin: 2% auto 0 auto;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1.2em;
 }
 .card-body {
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-  background-color: #9bc995;
+  border-radius: 1.5rem;
+  background-color: #fff;
   color: #595959;
+  padding: 1.2em;
 }
 
 a {
@@ -15,34 +20,49 @@ a {
 }
 
 a:hover {
-  color: #4169e1;
+  color: #7a7c85;
 }
 
-h4.card-title {
+#card-body-container .card-title {
   font-size: 24px;
   font-weight: bold;
-  color: #0d1b2a !important;
-  background-color: #f5f5f5;
-  border: 2px solid #9bc995;
+  color: #0d1b2a;
+  position: relative;
+  line-height: 1.2em;
   border-radius: 10px;
   padding: 10px 15px;
-  margin: 0;
+  margin: 0 0 1rem 0;
   text-align: center;
 }
 
-.text-muted {
-  font-size: 16px;
+#card-body-container .blog-card-date {
+  font-size: 1rem;
+  line-height: 1.2em;
+  font-weight: 700;
+  margin: 0 0 1.25rem 0;
   color: #595959;
-  padding: 8px 0;
+  display: block;
 }
 
-.card-text {
-  font-size: 18px;
-  line-height: 1.6;
+#card-body-container .blog-card-text {
+  font-size: 1rem;
+  line-height: 1.5em;
+  margin: 0 0 1.25rem 0;
   color: #0d1b2a;
-  padding: 20px;
-  margin: 0;
+  white-space: pre-line;
   word-break: break-word;
 
   letter-spacing: -0.003em;
+  display: block;
+}
+
+#card-body-container .blog-card-author {
+  padding: 1em;
+  text-align: center;
+  font-size: 1rem;
+  line-height: 1.2em;
+  font-weight: 600;
+  margin: 0 0 1.25rem 0;
+  color: #595959;
+  display: block;
 }
