--- a/packages/client/src/components/Hero/hero.css
+++ b/packages/client/src/components/Hero/hero.css
@@ -1,4 +1,5 @@
 .hero-section {
+  width: 100vw;
   position: relative;
   background-color: #f0fff4;
   color: #3949ab;
@@ -20,13 +21,15 @@
 }
 
 .hero-heading {
-  color: #1a237e;
-  font-size: 48px;
-  font-weight: bold;
-  letter-spacing: 2px;
-  margin-bottom: 20px;
-
   animation: text-shadow-animation 1.5s infinite;
+  font-size: var(--headerFontSize);
+  font-weight: 900;
+  line-height: 1.2em;
+  text-align: inherit;
+  max-width: 43.75rem;
+  margin: 0 0 1rem 0;
+  color: #1a237e;
+  position: relative;
 }
 
 @keyframes text-shadow-animation {
@@ -43,17 +46,43 @@
 
 .p-text {
   font-size: 20px;
+  color: var(--bodyTextColor);
 }
 
-.cta-button {
-  margin-top: 30px;
-  padding: 12px 30px;
-  font-size: 18px;
+.hero-section .cta-button {
+  font-size: 1rem;
+  /* 46px - 56px */
+  line-height: clamp(2.875rem, 5.5vw, 3.5rem);
+  text-decoration: none;
+  font-weight: 700;
+  text-align: center;
+  margin: 0;
+  color: #fff;
+  min-width: 9.375rem;
+  padding: 0 1.5rem;
   background-color: #ff6f61;
-  border: none;
-  border-radius: 5px;
+  border-radius: 0.25rem;
+  display: inline-block;
+  position: relative;
+  z-index: 1;
 
-  animation: box-shadow-animation 1.5s infinite;
+  box-sizing: border-box;
+}
+.hero-section .cta-button:before {
+  content: "";
+  position: absolute;
+  height: 100%;
+  width: 0%;
+  background: #1a237e;
+  opacity: 1;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  border-radius: 0.25rem;
+  transition: width 0.3s;
+}
+.hero-section .cta-button:hover:before {
+  width: 100%;
 }
 
 @keyframes box-shadow-animation {
