--- a/packages/client/src/components/Footer/footer.css
+++ b/packages/client/src/components/Footer/footer.css
@@ -1,4 +1,4 @@
-.footer {
+/* .footer {
   position: fixed;
   bottom: 0;
   left: 0;
@@ -22,4 +22,101 @@
   fill: #f0fff4;
   transition: fill 0.2s;
   margin-bottom: 20px;
+} */
+
+/* Mobile - 360px - Contains hover state */
+@media only screen and (min-width: 0rem) {
+  :root {
+    /* remove this whole :root and put in your global css file that's shared on all pages, then just remove this section from all other Stitches you add later, only need this once in your global stylesheet */
+    --primary: #001f3f;
+    --primaryLight: #001f3f;
+    --secondary: #ffba43;
+    --secondaryLight: #ffba43;
+    --headerColor: #1a1a1a;
+    --bodyTextColor: #4e4b66;
+    --bodyTextColorWhite: #fafbfc;
+    /* 13px - 16px */
+    --topperFontSize: clamp(0.8125rem, 1.6vw, 1rem);
+    /* 31px - 49px */
+    --headerFontSize: clamp(1.9375rem, 3.9vw, 3.0625rem);
+    --bodyFontSize: 1rem;
+    /* 60px - 100px top and bottom */
+    --sectionPadding: clamp(3.75rem, 7.82vw, 6.25rem) 1rem;
+  }
+  #cs-footer-107 {
+    font-family: "Roboto", "Arial", sans-serif;
+    padding: 2.5em 1em;
+    background: #778899;
+  }
+  #cs-footer-107 .cs-container {
+    width: 100%;
+    max-width: 80em;
+    margin: auto;
+  }
+  #cs-footer-107 .cs-ul {
+    padding: 0;
+    margin: auto;
+    display: flex;
+    /* make flexbox arrange top to bottom */
+    flex-direction: column;
+    align-items: center;
+    gap: 1.25rem;
+  }
+  #cs-footer-107 .cs-li {
+    list-style: none;
+    text-align: center;
+    margin: 0;
+  }
+  #cs-footer-107 .cs-copyright {
+    font-size: 0.9375rem;
+    line-height: 1.5em;
+    margin-top: 1.25rem;
+    color: #a0a3bd;
+    display: block;
+    /* send to first position at the bottom */
+    order: 1;
+    /* prevents flexbox from squishing it */
+    flex: none;
+  }
+  #cs-footer-107 .cs-link {
+    /* 15px - 17px */
+    font-size: clamp(0.9375rem, 2vw, 1.0625rem);
+    line-height: 1.5em;
+    text-decoration: none;
+    font-weight: 700;
+    color: var(--bodyTextColorWhite);
+    position: relative;
+  }
+  #cs-footer-107 .cs-link:hover:before {
+    width: 100%;
+  }
+  #cs-footer-107 .cs-link:before {
+    /* top right box */
+    content: "";
+    width: 0%;
+    height: 0.1875rem;
+    background: var(--bodyTextColorWhite);
+    opacity: 1;
+    position: absolute;
+    display: block;
+    bottom: -0.125rem;
+    left: 0;
+    transition: width 0.3s;
+  }
+}
+/* Tablet - 700px */
+@media only screen and (min-width: 43.75rem) {
+  #cs-footer-107 .cs-ul {
+    flex-direction: row;
+    /* push everything to the left */
+    justify-content: flex-start;
+    /* 44px - 88px */
+    gap: clamp(2.75rem, 7vw, 5.5rem);
+  }
+  #cs-footer-107 .cs-copyright {
+    /* marign auto on the left pushes away from the rest of the flex children */
+    margin: 0 0 0 auto;
+    /* send to the right most position */
+    order: 2;
+  }
 }
