--- a/packages/client/src/pages/Profile/profile.css
+++ b/packages/client/src/pages/Profile/profile.css
@@ -8,33 +8,38 @@
 }
 
 .edit-button {
-  background-color: #4f7cac;
-  color: #ffffff;
-  margin-top: 5px;
-  border: none;
-  padding: 10px 20px;
-  border-radius: 4px;
+  font-size: 1rem;
+  /* 46px - 56px */
+  line-height: clamp(2.875rem, 5.5vw, 3.5rem);
+  text-decoration: none;
+  font-weight: 700;
+  text-align: center;
+  margin: 0;
+  color: #fff;
+  min-width: 9.375rem;
+  padding: 0 1.5rem;
   cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-.edit-button:hover {
-  background-color: #0d1b2a;
-}
+  background-color: #4f7cac;
+  border-radius: 0.25rem;
+  display: inline-block;
+  position: relative;
+  z-index: 1;
 
-.my-masonry-grid {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  /* justify-content: space-between; */
-  margin-left: -30px;
-  width: auto;
+  box-sizing: border-box;
 }
-.my-masonry-grid_column {
-  padding-left: 30px;
-  background-clip: padding-box;
+.edit-button:before {
+  content: "";
+  position: absolute;
+  height: 100%;
+  width: 0%;
+  background: #000107;
+  opacity: 1;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  border-radius: 0.25rem;
+  transition: width 0.3s;
 }
-
-.my-masonry-grid_column > div {
-  background: #f0ffec;
-  margin-bottom: 20px;
+.edit-button:hover:before {
+  width: 100%;
 }
